Change create/update endpoints to send and receive DTOs